fix: Assessments page dark mode design

--- a/src/components/UI/InputWidthSelect/styles.scss
+++ b/src/components/UI/InputWidthSelect/styles.scss
@@ -2,3 +2,7 @@
 .mantine-1nymnbu:focus-within {
   border-color: #f5aa26 !important;
 }
+
+.mantine-1nymnbu {
+  background: transparent;
+}
